# hackertons

./: .gitignore
20241028-hackerton-dacon-gbt-final/: alembic.ini  crawler_epeople_case.py  example.py  example_pymilvus.py  init_db.py  pyproject.toml
20241028-hackerton-dacon-gbt-final/datasets/: yongin.db
20241028-hackerton-dacon-gbt-final/src/database/: models.py  session.py
20241028-hackerton-dacon-gbt-final/yongin_assistant/: .dockerignore  .gitignore  README.md  app.py  constant.py  crawler_epeople_case.py  dockerfile  example_parsing_raw_data.py  example_pymilvus.py  example_pymilvus_search.py  fly.toml  main.py  pyproject.toml
20241028-hackerton-dacon-gbt-final/yongin_assistant/datasets/: milvus_demo.db  yongin.db
20241028-hackerton-dacon-gbt-final/yongin_assistant/examples/: example_console.py  example_pymilvus_llm.py  yongin_category_classifier.ipynb
20241028-hackerton-dacon-gbt-final/yongin_assistant/scripts/: script_crawl_epeople_case.py  script_milvus_uploader.py
20241028-hackerton-dacon-gbt-final/yongin_assistant/tests/: test_categorized.py
20241028-hackerton-dacon-gbt-final/yongin_assistant/yongin_assistant/: llm_service.py  schemas.py  vector_service.py  vectorstore.py
20241028-hackerton-dacon-gbt-final/yongin_assistant/yongin_assistant/database/: models.py  session.py
20241028-hackerton-dacon-gbt-final/yongin_assistant/yongin_assistant/service/: __init__.py  llm_service.py  vector_service.py
20241028-hackerton-dacon-gbt-final/yongin_assistant/yongin_assistant/vectorstore/: __init__.py
(+26 files in other folders)
